--- a/app/styles/entry.scss
+++ b/app/styles/entry.scss
@@ -26,6 +26,17 @@
 		color: #607D8B;
 	}
 }
+.add-ul-head-wrap{
+	width: 400px;
+	height: 30px;
+	overflow: hidden;
+	display: flex;
+}
+.add-ul-head-wrap li{
+	float: left;
+	list-style: none;
+	flex: 1;
+}
 
 div h3{
 	text-align: center;
