--- a/app/index.jade
+++ b/app/index.jade
@@ -2,6 +2,8 @@ doctype html
 html
 	head
 		title testgulp
+		link(rel="shortcut icon",href="/favicon.ico")
+		link(rel="bookmark",href="/favicon.ico")
 		link(rel='stylesheet',type='text/css',href='./styles/entry.css')
 		script(src='../js/libs.js')
 		script(src='../js/all.js')
